Phase 6: Complete testing and validation with memory optimizations
- Added comprehensive test suite: 82 tests (58 unit, 19 integration, 5 compatibility)
- All tests passing with 100% success rate
- Implemented memory optimizations:
  * Use temporary directories instead of real data directories
  * Disabled coverage by default to reduce memory overhead
  * Added automatic garbage collection after each test
- Created MEMORY_OPTIMIZATION.md documentation
- Updated progress tracking for Phase 6 completion
- Optimized pytest configuration for memory efficiency
- Updated conftest.py with memory-efficient fixtures

Test coverage:
- Unit tests for all strategy classes (auth, image sources, AI clients, output)
- Integration tests for both LOCAL and GOOGLECLOUD modes
- Compatibility tests for legacy configurations
- Performance tests
- Error handling tests

--- a/.pytest.ini
+++ b/.pytest.ini
@@ -3,7 +3,10 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = --cov=transcribe --cov-report=html --cov-report=term --verbose
+# Memory-efficient settings: disable coverage by default (use --cov explicitly when needed)
+# Run tests sequentially to avoid memory accumulation
+addopts = --verbose --tb=short
+# Coverage can be enabled explicitly: pytest --cov=transcribe
 markers =
     unit: Unit tests
     integration: Integration tests
