Add multi-format output (Log, Markdown, Word) for LOCAL mode
- Add python-docx>=0.8.11 to requirements.txt
- Add docx import with error handling
- Create CompositeOutput class to manage multiple output strategies
- Create MarkdownOutput class (saves .md files to image_dir)
- Create WordOutput class (saves .docx files to image_dir)
- Create create_local_overview_section helper for local mode
- Update ModeFactory to use CompositeOutput with all three strategies
- Update config.local.example.yaml to document multi-format behavior
- LOCAL mode now generates 3 files per run: log (logs/), markdown (image_dir/), word (image_dir/)

--- a/config/config.local.example.yaml
+++ b/config/config.local.example.yaml
@@ -20,6 +20,10 @@ local:
   
   # Output directory for log files (optional, default: "logs")
   # Log files will contain transcriptions and session metadata
+  # Note: LOCAL mode now generates THREE output files:
+  #   1. Log file (.log) - saved to output_dir (e.g., logs/)
+  #   2. Markdown file (.md) - saved to image_dir (source folder)
+  #   3. Word file (.docx) - saved to image_dir (source folder)
   output_dir: "logs"
   
   # OCR Model ID (optional, default: "gemini-3-flash-preview")
