--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ google-auth-oauthlib>=1.1.0
 google-genai>=0.8.0
 Pillow>=10.0.0
 python-dotenv>=1.0.0
-pyyaml>=6.0 
+pyyaml>=6.0 python-docx>=0.8.11
