Update default OCR model and add API quota documentation
Changed default model from gemini-3-flash-preview/gemini-1.5-pro to
gemini-flash-latest across all modes for better stability and access.

Changes:
- Updated default ocr_model_id to "gemini-flash-latest" in all config examples
- Updated all default values in transcribe.py (7 locations)
- Expanded available models list to include:
  * gemini-flash-latest (recommended)
  * gemini-flash-lite-latest (faster, lighter)
  * gemini-3-pro-preview (advanced reasoning)
  * gemini-3-flash-preview (preview version)
- Added comprehensive documentation about API limits and quotas
- Added new "Model Limits and API Quotas" section in CONFIGURATION.md
- Included notes about free tier limitations for Pro models
- Added reference to official Google AI limits documentation

Files updated:
- config/config.local.example.yaml
- config/config.googlecloud.example.yaml
- docs/CONFIGURATION.md
- docs/MIGRATION.md
- README.md
- transcribe.py

All 58 unit tests pass. No breaking changes.

--- a/config/config.local.example.yaml
+++ b/config/config.local.example.yaml
@@ -26,9 +26,16 @@ local:
   #   3. Word file (.docx) - saved to image_dir (source folder)
   output_dir: "logs"
   
-  # OCR Model ID (optional, default: "gemini-3-flash-preview")
-  # Available models: "gemini-3-flash-preview", "gemini-1.5-pro", "gemini-1.5-flash", etc.
-  ocr_model_id: "gemini-3-flash-preview"
+  # OCR Model ID (optional, default: "gemini-flash-latest")
+  # Available models:
+  #   - "gemini-flash-latest" (recommended - latest stable Flash model)
+  #   - "gemini-flash-lite-latest" (faster, lighter version)
+  #   - "gemini-3-pro-preview" (advanced reasoning, higher limits with paid plans)
+  #   - "gemini-3-flash-preview" (preview version)
+  # Note: Without a Google AI subscription plan, Pro models have basic access with 
+  #       daily limits that may change frequently. Flash models have general access.
+  #       See: https://support.google.com/gemini/answer/16275805
+  ocr_model_id: "gemini-flash-latest"
 
 # ------------------------- SHARED CONFIGURATION -------------------------
 # These settings apply to both LOCAL and GOOGLECLOUD modes
