--- a/config/config.googlecloud.example.yaml
+++ b/config/config.googlecloud.example.yaml
@@ -21,8 +21,15 @@ googlecloud:
   region: "global"
   
   # OCR Model ID for Gemini
-  # Examples: "gemini-3-flash-preview", "gemini-2.5-pro", etc.
-  ocr_model_id: "gemini-3-flash-preview"
+  # Available models:
+  #   - "gemini-flash-latest" (recommended - latest stable Flash model)
+  #   - "gemini-flash-lite-latest" (faster, lighter version)
+  #   - "gemini-3-pro-preview" (advanced reasoning, higher limits with paid plans)
+  #   - "gemini-3-flash-preview" (preview version)
+  # Note: Without a Google AI subscription plan, Pro models have basic access with 
+  #       daily limits that may change frequently. Flash models have general access.
+  #       See: https://support.google.com/gemini/answer/16275805
+  ocr_model_id: "gemini-flash-latest"
   
   # Application Default Credentials file path
   # ADC file with refresh token for OAuth2 authentication
