Revert default model to gemini-3-flash-preview for better transcription quality
Based on testing, gemini-3-flash-preview provides more reliable transcription
results than gemini-flash-latest. Reverting default across all configurations.

Changes:
- Reverted default ocr_model_id to "gemini-3-flash-preview" in all configs
- Updated all default values in transcribe.py (7 locations)
- Reordered available models list with gemini-3-flash-preview as recommended
- Added note that gemini-flash-latest may be less reliable for transcription
- Kept comprehensive API limits and quota documentation
- Maintained model selection guidance for different use cases

Model priority:
1. gemini-3-flash-preview (recommended - best transcription quality)
2. gemini-flash-latest (latest stable, but less reliable for OCR)
3. gemini-flash-lite-latest (faster, lighter)
4. gemini-3-pro-preview (advanced reasoning, paid plans)

Files updated:
- config/config.local.example.yaml
- config/config.googlecloud.example.yaml
- docs/CONFIGURATION.md
- docs/MIGRATION.md
- README.md
- transcribe.py

All 58 unit tests pass.

--- a/config/config.googlecloud.example.yaml
+++ b/config/config.googlecloud.example.yaml
@@ -22,14 +22,14 @@ googlecloud:
   
   # OCR Model ID for Gemini
   # Available models:
-  #   - "gemini-flash-latest" (recommended - latest stable Flash model)
+  #   - "gemini-3-flash-preview" (recommended - best for transcription quality)
+  #   - "gemini-flash-latest" (latest stable Flash model, may be less reliable)
   #   - "gemini-flash-lite-latest" (faster, lighter version)
   #   - "gemini-3-pro-preview" (advanced reasoning, higher limits with paid plans)
-  #   - "gemini-3-flash-preview" (preview version)
   # Note: Without a Google AI subscription plan, Pro models have basic access with 
   #       daily limits that may change frequently. Flash models have general access.
   #       See: https://support.google.com/gemini/answer/16275805
-  ocr_model_id: "gemini-flash-latest"
+  ocr_model_id: "gemini-3-flash-preview"
   
   # Application Default Credentials file path
   # ADC file with refresh token for OAuth2 authentication
