Fix GOOGLECLOUD mode: handle nested config format, prevent duplicate docs, fix empty range styling errors
- Updated config access to handle both normalized (nested) and legacy (flat) formats
- Fixed duplicate document creation by removing redundant initialize() call
- Added range validation for updateTextStyle requests to prevent empty range errors
- Pass full config to GoogleDocsOutput to ensure shared fields (archive_index) are available
- Tested successfully: single doc created with proper structure

--- a/config/config.googlecloud.example.yaml
+++ b/config/config.googlecloud.example.yaml
@@ -10,7 +10,7 @@ mode: "googlecloud"
 googlecloud:
   # Google Cloud Project ID
   # Example: "ukr-transcribe-genea"
-  project_id: "ru-ocr-genea"
+  project_id: "ukr-transcribe-genea"
   
   # Google Drive folder ID containing the images to transcribe
   # Get this from the Drive folder URL: https://drive.google.com/drive/folders/FOLDER_ID
