Security review: Update .gitignore and add security review report
- Updated .gitignore to exclude user-generated config files
- Added patterns for my-*.yaml, *-test*.yaml, *-tmp*.yaml, config-RS-*.yaml
- Created SECURITY-REVIEW.md with comprehensive security audit results
- Verified no API keys in tracked files
- All user configs with real API keys are properly excluded from git

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,10 @@ famsearch_page_sources/
 *.bak
 
 
-# Local test configs with API keys
+# Local test configs with API keys and user-generated configs
 config/test-local.yaml
+config/test-googlecloud.yaml
+config/my-*.yaml
+config/*-test*.yaml
+config/*-tmp*.yaml
+config/config-RS-*.yaml
