feat(wizard): improve image range selection and validation
- Reorder wizard flow: ask for sorting method first, then adjust image selection
- Add max available images display in image count prompt
- Show selected image range with start/end filenames after selection
- Support GOOGLECLOUD mode for image range display (list files from Drive)
- Always show 'By extracted number' option (even when auto-detection unavailable)
- Remove max_images prompt (now auto-calculated based on image_start_number + image_count)
- Enhance validation messages with prescriptive actions and impact descriptions
- Add Ukrainian translations for all validation messages
- Suppress thought_signature warnings from Gemini API during title page extraction
- Update image extensions to match Google AI API supported formats (PNG, JPEG, WEBP, HEIC, HEIF)
- Update tests to include image_sort_method in configs

--- a/tests/fixtures/config_googlecloud.yaml
+++ b/tests/fixtures/config_googlecloud.yaml
@@ -16,6 +16,7 @@ prompt_file: "f487o1s545-Turilche.md"
 archive_index: "ф487оп1спр545"
 image_start_number: 1
 image_count: 3
+image_sort_method: "number_extracted"  # Use number-based selection for tests
 batch_size_for_doc: 2
 max_images: 1000
 
