--- a/tests/fixtures/config_local.yaml
+++ b/tests/fixtures/config_local.yaml
@@ -14,3 +14,4 @@ prompt_file: "f487o1s545-Turilche.md"
 archive_index: "ф487оп1спр545"
 image_start_number: 1
 image_count: 3  # Test with 3 images
+image_sort_method: "number_extracted"  # Use number-based selection for tests
